--- a/style.css
+++ b/style.css
@@ -74,10 +74,12 @@ body {
 }
 
 .close-btn {
+  .close-btn {
   align-self: flex-end;
   cursor: pointer;
   font-size: 22px;
-  color: white;
+  color: white; /* porque el menú es oscuro */
+}
 }
 
 /* HERO */
@@ -215,5 +217,6 @@ img {
   }
 
 }
+
 
 
