--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
-/* ===== BODY ===== */
+/*  BODY  */
 
 body {
   background: white;
   color: #222;
 }
 
-/* ===== HEADER ===== */
+/*  HEADER */
 
 .header {
   display: flex;
@@ -29,7 +29,7 @@ body {
   gap: 12px;
 }
 
-/* 🔥 LOGO CONTROLADO (NO CRECE MÁS) */
+/* LOGO de la Empresa*/
 .header .brand img {
   width: 50px;
   height: 50px;
@@ -42,7 +42,7 @@ body {
   font-weight: bold;
 }
 
-/* ===== MENÚ ===== */
+/* MENÚ  */
 
 .menu-icon {
   font-size: 28px;
@@ -82,9 +82,9 @@ body {
   color: white;
 }
 
-/* ===== HERO ===== */
+/* Imagen Principal */
 
-.hero {
+.Principal {
   height: 85vh;
   background: url("principal.jpg") center/cover no-repeat;
   display: flex;
@@ -109,14 +109,14 @@ body {
   font-size: 18px;
 }
 
-/* ===== HISTORIA ===== */
+/* HISTORIA */
 
 .historia {
   padding: 70px 60px;
   text-align: center;
 }
 
-/* ===== SECCIONES FLEX (MISIÓN / VISIÓN) ===== */
+/* (MISIÓN / VISIÓN) */
 
 .section-flex {
   display: flex;
@@ -142,7 +142,7 @@ body {
   text-align: center;
 }
 
-/* ===== CRECIMIENTO ===== */
+/* CRECIMIENTO */
 
 .crecimiento {
   padding: 70px 60px;
@@ -163,14 +163,14 @@ body {
   color: #00bcd4;
 }
 
-/* ===== IMÁGENES GENERALES ===== */
+/* IMÁGENES GENERALES */
 
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* ===== RESPONSIVE TABLET ===== */
+/* RESPONSIVE TABLET */
 
 @media (max-width: 992px) {
 
@@ -184,7 +184,7 @@ img {
 
 }
 
-/* ===== RESPONSIVE CELULAR ===== */
+/* RESPONSIVE CELULAR  */
 
 @media (max-width: 600px) {
 
@@ -216,6 +216,7 @@ img {
   }
 
 }
+
 
 
 
